--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
       name="description"
       content="Portfolio Hakim Nemar"
       />
+    <meta property="og:image" content="%PUBLIC_URL%/logo.svg" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.svg" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
