add meta author

--- a/public/index.html
+++ b/public/index.html
@@ -5,11 +5,9 @@
     <link rel="icon" href="%PUBLIC_URL%/logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Portfolio Hakim Nemar"
-      />
-    <meta property="og:image" content="%PUBLIC_URL%/logo.svg" />
+    <meta name="author" content="Hakim Nemar">
+    <meta name="description" content="Portfolio" />
+    <meta name="image" property="og:image" content="%PUBLIC_URL%/logo.svg" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.svg" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
